--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-remove-scroll-bar": "^2.3.4",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "nth-check": ">=2.0.1",
+    "postcss": ">=8.4.31"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.8.7"
+    "prettier": "2.8.7",
+    "nth-check": ">=2.0.1",
+    "postcss": ">=8.4.31"
   }
 }
